Add divs to index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Aertel Generator</title>
 </head>
 <body>
+    <!-- Main Aertel View-->
+    <div id="aertel">
+
+    </div>
+    <!-- Controls to save the image or change the headline-->
+    <div id="controls">
+
+    </div>
     
     <script src="assets/js/script.js"></script>
 </body>
