--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </div>
     <!-- Controls to save the image or change the headline-->
     <div id="controls">
-
+        <button id="download-image">Download</button>
+        <button id="edit-text">Edit</button>
     </div>
     
     <script src="assets/js/script.js"></script>
