Add footer text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <button id="edit-text">Edit</button>
     </div>
     
+    <footer>
+        Check out my other projects on <a href="https://github.com/adamgilroy22" target="_blank">GitHub</a> and connect with me on <a href="https://www.linkedin.com/in/adamgilroy22/" target="_blank">LinkedIn!</a>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
