Add text content to index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
 <body>
     <!-- Main Aertel View-->
     <div id="aertel">
-
+        <h1>AERTEL</h1>
+        <p>News</p>
+        <h4 id="headline">Your Headline Here</h4>
+        <p>WIN TICKETS</p>
+        <ul>
+            <li>News</li>
+            <li>Sport</li>
+            <li>Entertainment</li>
+            <li>Business</li>
+        </ul>
+        <ul>
+            <li>TV INDEX</li>
+            <li>Travel</li>
+            <li>Competitions</li>
+            <li>Classifieds</li>
+        </ul>
+        <p>3/1 Some Bet - PADDY POWER</p>
+        <p>AERTEL FULL CONTENTS 101</p>
+        <p>www.github.com/adamgilroy22</p>
+        <p>WIN TICKETS TO SOMETHING 690</p>
+        <p>Full Index News Heads TV Now Sport</p>
     </div>
     <!-- Controls to save the image or change the headline-->
     <div id="controls">
