Add comments to index

--- a/index.html
+++ b/index.html
@@ -10,26 +10,37 @@
 <body>
     <!-- Main Aertel View-->
     <div id="aertel">
+        <!-- Heading -->
         <h1>AERTEL</h1>
+        <!-- News headline -->
         <p>News</p>
         <h4 id="headline">Your Headline Here</h4>
+        <!-- Comp 1 -->
         <p>WIN TICKETS</p>
+        <!-- Aertel menu -->
+        <!-- Left row -->
         <ul>
             <li>News</li>
             <li>Sport</li>
             <li>Entertainment</li>
             <li>Business</li>
         </ul>
+        <!-- Right row -->
         <ul>
             <li>TV INDEX</li>
             <li>Travel</li>
             <li>Competitions</li>
             <li>Classifieds</li>
         </ul>
+        <!-- After menu section -->
         <p>3/1 Some Bet - PADDY POWER</p>
+        <!-- Full contents -->
         <p>AERTEL FULL CONTENTS 101</p>
+        <!-- Url -->
         <p>www.github.com/adamgilroy22</p>
+        <!-- Comp 2-->
         <p>WIN TICKETS TO SOMETHING 690</p>
+        <!-- Bottom menu -->
         <p>Full Index News Heads TV Now Sport</p>
     </div>
     <!-- Controls to save the image or change the headline-->
