Add numbers to menu

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
         <h1>AERTEL</h1>
         <!-- News headline -->
         <p>News</p>
-        <h4 id="headline">Your Headline Here</h4>
+        <h4 id="headline">Your Headline Here 104</h4>
         <!-- Comp 1 -->
         <p>WIN TICKETS</p>
         <!-- Aertel menu -->
         <!-- Left row -->
         <ul>
-            <li>News</li>
-            <li>Sport</li>
-            <li>Entertainment</li>
-            <li>Business</li>
+            <li>News 102</li>
+            <li>Sport 200</li>
+            <li>Entertainment 300</li>
+            <li>Business 130</li>
         </ul>
         <!-- Right row -->
         <ul>
-            <li>TV INDEX</li>
-            <li>Travel</li>
-            <li>Competitions</li>
-            <li>Classifieds</li>
+            <li>TV INDEX 170</li>
+            <li>Travel 500</li>
+            <li>Competitions 620</li>
+            <li>Classifieds 600</li>
         </ul>
         <!-- After menu section -->
-        <p>3/1 Some Bet - PADDY POWER</p>
+        <p>3/1 Some Bet - PADDY POWER 608</p>
         <!-- Full contents -->
         <p>AERTEL FULL CONTENTS 101</p>
         <!-- Url -->
