Add spans for text colour

--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
     <!-- Main Aertel View-->
     <div id="aertel">
         <!-- Heading -->
-        <h1>AERTEL</h1>
+        <h1><span id="green">NOT</span> AERTEL</h1>
         <!-- News headline -->
-        <p>News</p>
+        <p><span id="green">NEWS</span></p>
         <h4 id="headline">Your Headline Here 104</h4>
         <!-- Comp 1 -->
-        <p>WIN TICKETS</p>
+        <p>WIN TICKETS <span id="green">620</span></p>
         <!-- Aertel menu -->
         <!-- Left row -->
         <ul>
-            <li>News 102</li>
-            <li>Sport 200</li>
-            <li>Entertainment 300</li>
-            <li>Business 130</li>
+            <li>News <span id="green">102</span></li>
+            <li>Sport <span id="green">200</span></li>
+            <li>Entertainment <span id="green">300</span></li>
+            <li>Business <span id="green">130</span></li>
         </ul>
         <!-- Right row -->
         <ul>
-            <li>TV INDEX 170</li>
-            <li>Travel 500</li>
-            <li>Competitions 620</li>
-            <li>Classifieds 600</li>
+            <li><span id="green">TV INDEX 170</span></li>
+            <li>Travel <span id="green">500</span></li>
+            <li>Competitions <span id="green">620</span></li>
+            <li>Classifieds <span id="green">600</span></li>
         </ul>
         <!-- After menu section -->
-        <p>3/1 Some Bet - PADDY POWER 608</p>
+        <p><span id="green">3/1 Some Bet - PADDY POWER 608</span></p>
         <!-- Full contents -->
-        <p>AERTEL FULL CONTENTS 101</p>
+        <p>AERTEL FULL CONTENTS <span id="teal">101</span></p>
         <!-- Url -->
-        <p>www.github.com/adamgilroy22</p>
+        <p><span id="green">www.github.com/adamgilroy22</span></p>
         <!-- Comp 2-->
-        <p>WIN TICKETS TO SOMETHING 690</p>
+        <p>WIN TICKETS TO SOMETHING <span id="teal">690</span></p>
         <!-- Bottom menu -->
-        <p>Full Index News Heads TV Now Sport</p>
+        <p><span id="red">Full Index</span> <span id="green">News Heads</span> <span id="yellow">TV Now</span> <span id="teal">Sport</span></p>
     </div>
     <!-- Controls to save the image or change the headline-->
     <div id="controls">
