--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1><span id="green">NOT</span> AERTEL</h1>
         <!-- News headline -->
         <p><span id="green">NEWS</span></p>
-        <h4 id="headline">Your Headline Here 104</h4>
+        <h4 id="headline">Your Headline Here <span id="green">104</span></h4>
         <!-- Comp 1 -->
         <p>WIN TICKETS <span id="green">620</span></p>
         <!-- Aertel menu -->
