Add divs for blue background sections

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,21 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Aertel Generator</title>
 </head>
+
 <body>
     <!-- Main Aertel View-->
     <div id="aertel">
         <!-- Heading -->
-        <h1><span id="green">NOT</span> AERTEL</h1>
+        <div class="blue-bg">
+            <h1><span id="green">NOT</span> AERTEL</h1>
+        </div>
         <!-- News headline -->
         <p><span id="green">NEWS</span></p>
         <h4 id="headline">Your Headline Here <span id="green">104</span></h4>
         <!-- Comp 1 -->
-        <p>WIN TICKETS <span id="green">620</span></p>
+        <div class="blue-bg">
+            <p>WIN TICKETS <span id="green">620</span></p>
+        </div>
         <!-- Aertel menu -->
         <!-- Left row -->
         <ul>
@@ -35,23 +41,30 @@
         <!-- After menu section -->
         <p><span id="green">3/1 Some Bet - PADDY POWER 608</span></p>
         <!-- Full contents -->
-        <p>AERTEL FULL CONTENTS <span id="teal">101</span></p>
+        <div class="blue-bg">
+            <p>AERTEL FULL CONTENTS <span id="teal">101</span></p>
+        </div>
         <!-- Url -->
         <p><span id="green">www.github.com/adamgilroy22</span></p>
         <!-- Comp 2-->
-        <p>WIN TICKETS TO SOMETHING <span id="teal">690</span></p>
+        <div class="blue-bg">
+            <p>WIN TICKETS TO SOMETHING <span id="teal">690</span></p>
+        </div>
         <!-- Bottom menu -->
-        <p><span id="red">Full Index</span> <span id="green">News Heads</span> <span id="yellow">TV Now</span> <span id="teal">Sport</span></p>
+        <p><span id="red">Full Index</span> <span id="green">News Heads</span> <span id="yellow">TV Now</span> <span
+                id="teal">Sport</span></p>
     </div>
     <!-- Controls to save the image or change the headline-->
     <div id="controls">
         <button id="download-image">Download</button>
         <button id="edit-text">Edit</button>
     </div>
-    
+
     <footer>
-        Check out my other projects on <a href="https://github.com/adamgilroy22" target="_blank">GitHub</a> and connect with me on <a href="https://www.linkedin.com/in/adamgilroy22/" target="_blank">LinkedIn!</a>
+        Check out my other projects on <a href="https://github.com/adamgilroy22" target="_blank">GitHub</a> and connect
+        with me on <a href="https://www.linkedin.com/in/adamgilroy22/" target="_blank">LinkedIn!</a>
     </footer>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
