--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <p><span id="green">3/1 Some Bet - PADDY POWER 608</span></p>
         <!-- Full contents -->
         <div class="blue-bg">
-            <p>AERTEL FULL CONTENTS <span id="teal">101</span></p>
+            <p>AERTEL FULL CONTENTS <span id="green">101</span></p>
         </div>
         <!-- Url -->
         <p><span id="green">www.github.com/adamgilroy22</span></p>
         <!-- Comp 2-->
         <div class="blue-bg">
-            <p>WIN TICKETS TO SOMETHING <span id="teal">690</span></p>
+            <p>WIN TICKETS TO SOMETHING <span id="green">690</span></p>
         </div>
         <!-- Bottom menu -->
         <p><span id="red">Full Index</span> <span id="green">News Heads</span> <span id="yellow">TV Now</span> <span
