Add center class

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <!-- Main Aertel View-->
     <div id="aertel">
         <!-- Heading -->
-        <div class="blue-bg">
+        <div class="blue-bg center">
             <h1><span id="green">NOT</span> AERTEL</h1>
         </div>
         <!-- News headline -->
         <p><span id="green">NEWS</span></p>
         <h4 id="headline">Your Headline Here <span id="green">104</span></h4>
         <!-- Comp 1 -->
-        <div class="blue-bg">
-            <p>WIN TICKETS <span id="green">620</span></p>
+        <div class="blue-bg center">
+            <p>WIN TICKETS TO SOMETHING <span id="green">620</span></p>
         </div>
         <!-- Aertel menu -->
         <!-- Left row -->
@@ -41,14 +41,14 @@
         <!-- After menu section -->
         <p><span id="green">3/1 Some Bet - PADDY POWER 608</span></p>
         <!-- Full contents -->
-        <div class="blue-bg">
+        <div class="blue-bg center">
             <p>AERTEL FULL CONTENTS <span id="green">101</span></p>
         </div>
         <!-- Url -->
         <p><span id="green">www.github.com/adamgilroy22</span></p>
         <!-- Comp 2-->
-        <div class="blue-bg">
-            <p>WIN TICKETS TO SOMETHING <span id="green">690</span></p>
+        <div class="blue-bg center">
+            <p>WIN TICKETS TO SOMETHING ELSE <span id="green">690</span></p>
         </div>
         <!-- Bottom menu -->
         <p><span id="red">Full Index</span> <span id="green">News Heads</span> <span id="yellow">TV Now</span> <span
