--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <footer>
-        Check out my other projects on <a href="https://github.com/adamgilroy22" target="_blank">GitHub</a> and connect
+        Check out my other projects over on <a href="https://github.com/adamgilroy22" target="_blank">GitHub</a> and connect
         with me on <a href="https://www.linkedin.com/in/adamgilroy22/" target="_blank">LinkedIn!</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
