Change edit button text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Controls to save the image or change the headline-->
     <div id="controls">
         <button id="download-image">Download</button>
-        <button id="edit-text">Edit</button>
+        <button id="edit-text">Edit Text</button>
     </div>
 
     <footer>
