change news comment

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="blue-bg center">
             <h1><span id="green">NOT</span> AERTEL</h1>
         </div>
-        <!-- News headline -->
+        <!-- Main News headline -->
         <p><span id="green">NEWS</span></p>
         <h4 id="headline">Your Headline Here <span id="green">104</span></h4>
         <!-- Comp 1 -->
