Change menu comments

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <h4 id="headline">Your Headline Here <span id="green">104</span></h4>
         <!-- Comp 1 -->
         <div class="blue-bg center">
-            <p>WIN TICKETS TO SOMETHING <span id="green">620</span></p>
+            <p>rowrowTICKETSrowrowTICKETSTICKETSTICKETS TO SOMETHING <span id="green">620</span></p>
         </div>
         <!-- Aertel menu -->
-        <!-- Left row -->
+        <!-- Left menu row -->
         <ul>
             <li>News <span id="green">102</span></li>
             <li>Sport <span id="green">200</span></li>
             <li>Entertainment <span id="green">300</span></li>
             <li>Business <span id="green">130</span></li>
         </ul>
-        <!-- Right row -->
+        <!-- Right men row -->
         <ul>
             <li><span id="green">TV INDEX 170</span></li>
             <li>Travel <span id="green">500</span></li>
