Fix typo in right menu comment

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>Entertainment <span id="green">300</span></li>
             <li>Business <span id="green">130</span></li>
         </ul>
-        <!-- Right men row -->
+        <!-- Right menu row -->
         <ul>
             <li><span id="green">TV INDEX 170</span></li>
             <li>Travel <span id="green">500</span></li>
