Fix typo in tickets section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h4 id="headline">Your Headline Here <span id="green">104</span></h4>
         <!-- Comp 1 -->
         <div class="blue-bg center">
-            <p>rowrowTICKETSrowrowTICKETSTICKETSTICKETS TO SOMETHING <span id="green">620</span></p>
+            <p>TICKETS TO SOMETHING <span id="green">620</span></p>
         </div>
         <!-- Aertel menu -->
         <!-- Left menu row -->
