--- a/index.html
+++ b/index.html
@@ -26,20 +26,26 @@
             <p>TICKETS TO SOMETHING <span id="green">620</span></p>
         </div>
         <!-- Aertel menu -->
-        <!-- Left menu row -->
-        <ul>
-            <li>News <span id="green">102</span></li>
-            <li>Sport <span id="green">200</span></li>
-            <li>Entertainment <span id="green">300</span></li>
-            <li>Business <span id="green">130</span></li>
-        </ul>
-        <!-- Right menu row -->
-        <ul>
-            <li><span id="green">TV INDEX 170</span></li>
-            <li>Travel <span id="green">500</span></li>
-            <li>Competitions <span id="green">620</span></li>
-            <li>Classifieds <span id="green">600</span></li>
-        </ul>
+        <div class="aertel-menu row">
+            <!-- Left menu row -->
+            <div class="col">
+                <ul>
+                    <li>News <span id="green">102</span></li>
+                    <li>Sport <span id="green">200</span></li>
+                    <li>Entertainment <span id="green">300</span></li>
+                    <li>Business <span id="green">130</span></li>
+                </ul>
+            </div>
+            <!-- Right menu row -->
+            <div class="col">
+                <ul>
+                    <li><span id="green">TV INDEX 170</span></li>
+                    <li>Travel <span id="green">500</span></li>
+                    <li>Competitions <span id="green">620</span></li>
+                    <li>Classifieds <span id="green">600</span></li>
+                </ul>
+            </div>
+        </div>
         <!-- After menu section -->
         <p><span id="green">3/1 Some Bet - PADDY POWER 608</span></p>
         <!-- Full contents -->
