Change competition comments

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Main News headline -->
         <p><span id="green">NEWS</span></p>
         <h4 id="headline">Your Headline Here <span id="green">104</span></h4>
-        <!-- Comp 1 -->
+        <!-- Competition 1 -->
         <div class="blue-bg center">
             <p>TICKETS TO SOMETHING <span id="green">620</span></p>
         </div>
@@ -54,7 +54,7 @@
         </div>
         <!-- Url -->
         <p><span id="green">www.github.com/adamgilroy22</span></p>
-        <!-- Comp 2-->
+        <!-- Competition 2-->
         <div class="blue-bg center">
             <p>WIN TICKETS TO SOMETHING ELSE <span id="green">690</span></p>
         </div>
