Fix first competition text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h4><span id="headline">Headline Here</span> <span id="green">104</span></h4>
         <!-- Competition 1 -->
         <div class="blue-bg center">
-            <p>TICKETS TO SOMETHING <span id="green">620</span></p>
+            <p>WIN TICKETS TO SOMETHING <span id="green">620</span></p>
         </div>
         <!-- Aertel menu -->
         <div class="aertel-menu row">
