Add modal box to change headline

--- a/index.html
+++ b/index.html
@@ -65,8 +65,35 @@
     <!-- Controls to save the image or change the headline-->
     <div id="controls">
         <button id="download-image">Download</button>
-        <button id="edit-text">Edit Text</button>
+        <button type="button" data-bs-toggle="modal" data-bs-target="#modalBox">Edit Text</button>
     </div>
+
+    <!-- Vertically centered scrollable modal -->
+
+    <div class="modal" tabindex="-1" id="modalBox">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Aertel Generator</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>
+                    Just fill in the news headline you want to see and click submit to view it.
+                    You can change the headline or download an image of your creation under the aertel screen.
+                </p>
+                <div class="mb-3">
+                    <label for="news-headline" class="col-form-label">New Headline:</label>
+                    <input type="text" class="form-control" id="news-headline">
+                  </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Edit Headline</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <footer>
         Check out my other projects over on <a href="https://github.com/adamgilroy22" target="_blank">GitHub</a> and connect
