--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </div>
     <!-- Controls to save the image or change the headline-->
     <div id="controls">
-        <button id="download-image">Download</button>
-        <button type="button" data-bs-toggle="modal" data-bs-target="#modalBox">Edit Text</button>
+        <button type="button" data-bs-toggle="modal" data-bs-target="#modalBox" class="btn btn-primary">Edit Text</button>
+        <button id="download-image" class="btn btn-success">Download</button>
     </div>
 
     <!-- Vertically centered scrollable modal -->
