--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                 </p>
                 <div class="mb-3">
                     <label for="news-headline" class="col-form-label">New Headline:</label>
-                    <input type="text" class="form-control" id="news-headline" placeholder="Your Headline Here">
+                    <input type="text" class="form-control" id="news-headline" placeholder="Your Headline Here (Max 32 characters)" maxlength="32">
                 </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Edit Headline</button>
+              <button type="button" class="btn btn-primary" onclick="changeHeadline()" data-bs-dismiss="modal">Edit Headline</button>
             </div>
           </div>
         </div>
