Remove style from ul

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="aertel-menu row">
             <!-- Left menu row -->
             <div class="col">
-                <ul>
+                <ul class="list-unstyled">
                     <li>News <span id="green">102</span></li>
                     <li>Sport <span id="green">200</span></li>
                     <li>Entertainment <span id="green">300</span></li>
@@ -38,7 +38,7 @@
             </div>
             <!-- Right menu row -->
             <div class="col">
-                <ul>
+                <ul class="list-unstyled">
                     <li><span id="green">TV INDEX 170</span></li>
                     <li>Travel <span id="green">500</span></li>
                     <li>Competitions <span id="green">620</span></li>
