Change button text

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <!-- Controls to save the image or change the headline-->
     <div id="controls">
-        <button type="button" data-bs-toggle="modal" data-bs-target="#modalBox" class="btn btn-primary">Edit Text</button>
+        <button type="button" data-bs-toggle="modal" data-bs-target="#modalBox" class="btn btn-primary">Edit Headline</button>
         <button id="download-image" class="btn btn-success">Download</button>
     </div>
 
@@ -89,7 +89,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary" onclick="changeHeadline()" data-bs-dismiss="modal">Edit Headline</button>
+              <button type="button" class="btn btn-primary" onclick="changeHeadline()" data-bs-dismiss="modal">Save</button>
             </div>
           </div>
         </div>
