Change placeholder headline text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <!-- Main News headline -->
         <p><span id="green">NEWS</span></p>
-        <h4><span id="headline">Headline Here</span> <span id="green">104</span></h4>
+        <h4><span id="headline">Your Headline Here</span> <span id="green">104</span></h4>
         <!-- Competition 1 -->
         <div class="blue-bg center">
             <p>WIN TICKETS TO SOMETHING <span id="green">620</span></p>
