Edit modal text

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <div class="modal-body">
                 <p>
-                    Just fill in the news headline you want to see and click submit to view it.
+                    Just fill in the news headline you want to see and click save to view it.
                     You can change the headline or download an image of your creation under the aertel screen.
                 </p>
                 <div class="mb-3">
