Change bet text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <!-- After menu section -->
-        <p><span id="green">4/1 Some Bet - PADDY POWER 608</span></p>
+        <p><span id="green">4/1 Some Bet - SOME BOOKIES 608</span></p>
         <!-- Full contents -->
         <div class="blue-bg center">
             <p>AERTEL FULL CONTENTS <span id="green">101</span></p>
