Link github on Aertel

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p>AERTEL FULL CONTENTS <span id="green">101</span></p>
         </div>
         <!-- Url -->
-        <p><span id="green">www.github.com/adamgilroy22</span></p>
+        <p><span id="green"><a href="https://github.com/adamgilroy22" target="_blank">www.github.com/adamgilroy22</a></span></p>
         <!-- Competition 2-->
         <div class="blue-bg center">
             <p>WIN TICKETS TO SOMETHING ELSE <span id="green">690</span></p>
